_includes/scss/mobile.scss
@media (max-width: 50em) {
  .header {
    padding: 15px;
    height: 50px;
    img {
      height: 20px;
    }
  }
  .cover {
    padding: 100px 0;
    figure {
      flex-direction: column;
      text-align: center;
      top: 0;
      transform: translateY(0);
    }
    img {
      margin: 0 auto;
      height: 20vh;
    }
    figcaption {
      padding-left: 0;
      margin-top: 20px;
    }
    h1 {
      font-size: 2.5rem;
    }
    p {
      font-size: 1rem;
    }
  }
  .footer {
    position: relative;
    flex-direction: column-reverse;
    .contact, .copyright {
      padding: 15px;
      text-align: center;
    }
    .copyright {
      position: relative;
    }
  }
  .aside {
    width: 300px;
    padding: 0 15px 15px;
    header {
      padding: 15px 0;
    }
    h2 {
      font-size: 1rem;
    }
    button {
      top: 15px;
      right: 15px;
    }
    a {
      padding: 10px;
      margin-bottom: 15px;
    }
  }
  .story {
    padding: 100px 30px;
    p, ol, ul, dl {
      width: 100%;
    }
    dt {
      width: 30%;
    }
    dd {
      width: 70%;
    }
  }
  .collage {
    .left, .right {
      padding: 0;
      width: 100%;
    }
    .pic {
      &, &.tall {
        height: auto;
      }
    }
  }
}

